# msgpacker

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  baseencode.c  baseencode.h  bitops.c  bitops.h  build.sh  clean.sh  main.c  main.cpp  msgpacker.pro  packer.c  packer.h  run.sh  vvvtest.cpp  vvvtest.h
src/: baseencode.c  baseencode.h  bitops.c
tests/: CMakeLists.txt  test.cpp
